# RSO

./: .env.bak  README.md  docker-compose.backend.yml  docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx_dev.conf  pyproject.toml
rso_backend/: .dockerignore  .gitignore  Dockerfile  _db.sqlite3  _db.sqlite3-journal  env  pyproject.toml  requirements.txt  setup.cfg
rso_backend/api/: backends.py  constants.py  log_entries.py  middlewares.py  mixins.py  permissions.py  swagger_schemas.py  throttling.py  urls.py  utils.py  views.py
rso_backend/competitions/: admin.py  apps.py  constants.py  filters.py  management.py  models.py  permissions.py  q_calculations.py  serializers.py  signal_handlers.py  swagger_schemas.py  tasks.py  utils.py  views.py
rso_backend/competitions/migrations/: 0002_linksq7_linksq8_q10_q10ranking_q10report_and_more.py  0005_alter_q19ranking_options_q20tandemranking_q20report_and_more.py  0007_q2tandemranking_q2ranking_q2detachmentreport_and_more.py  0014_q4tandemranking_q4ranking_q3tandemranking_q3ranking.py  0015_q15event_q15link_q5detachmentreport_and_more.py  0015_q5detachmentreport_alter_q3ranking_options_and_more.py  0017_q5detachmentreport_june_15_detachment_members.py  0018_q17detachmentreport_rename_q15ranking_q17ranking_and_more.py  0020_q16tandemranking_q16report_q16ranking.py  (+51 more)
rso_backend/events/: admin.py  apps.py  constants.py  filters.py  models.py  permissions.py  serializers.py  views.py
rso_backend/headquarters/: admin.py  apps.py  count_hq_members.py  filters.py  forms.py  mixins.py  models.py  serializers.py  urls.py  utils.py  views.py
rso_backend/questions/: admin.py  models.py  serializers.py  views.py
rso_backend/regional_competitions/: admin.py  apps.py  constants.py  factories.py  filters.py  forms.py  management.py  mixins.py  models.py  permissions.py  r_calculations.py  serializers.py  tasks.py  urls.py  utils.py  views.py
rso_backend/regional_competitions_2025/: admin.py  apps.py  constants.py  factories.py  filters.py  forms.py  mixins.py  models.py  permissions.py  r_calculations.py  serializers.py  tasks.py  urls.py  utils.py  views.py
rso_backend/reports/: apps.py  constants.py  tasks.py  urls.py  utils.py  views.py
rso_backend/rso_backend/: celery.py  s3_storage.py  settings.py  urls.py
rso_backend/services/: admin.py  models.py  serializers.py  tasks.py  views.py
rso_backend/users/: admin.py  apps.py  constants.py  filters.py  models.py  serializers.py  short_serializers.py  urls.py  views.py
(+137 files in other folders)
